setup spark and test it using a simple program